--- a/model_promt_parser.ipynb
+++ b/model_promt_parser.ipynb
@@ -2,26 +2,294 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import openai\n",
+    "\n",
+    "_ = load_dotenv(override=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm_model = os.getenv(\"LLM_MODEL\")\n",
+    "openai.api_key = os.getenv(\"OPEN_AI_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Helper function to prompt ChaptGPT "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_completion(prompt, model=llm_model):\n",
+    "    messages = [{\"role\":\"user\", \"content\":prompt}]\n",
+    "    response = openai.chat.completions.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=1.5\n",
+    "    )\n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Added to Opern AI 10USD Credits. based on the pricing plan it has:\n",
+    "|Model|Input|Output|\n",
+    "|-----|-----|------|\n",
+    "|gpt-3.5-turbo-1106|$0.0010/1K tokens|$0.0020/1K tokens|\n",
+    "||||\n",
+    "|TOTAL|10M Tokens|5M Tokens|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just a simple test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'dotenv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4928/1320428696.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdotenv\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_dotenv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_dotenv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'dotenv'"
+     "data": {
+      "text/plain": [
+       "'1 + 1 equals 2.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = get_completion(\"What is 1+1?\")\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now a text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "translate the text\n",
+      "that is delimited by the triple backticks\n",
+      "into a style that is American English in a calm and respectful tone\n",
+      "\n",
+      "text: ```\n",
+      "Arrr, I be fuming that me blender lid flew off and splattered me kitchen walls with smoothie! And to make matters worse,the warranty don't cover the cost of cleaning up me kitchen. I need yer help right now, matey!\n",
+      "```\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
+    "customer_email = \"\"\"\n",
+    "Arrr, I be fuming that me blender lid \\\n",
+    "flew off and splattered me kitchen walls \\\n",
+    "with smoothie! And to make matters worse,\\\n",
+    "the warranty don't cover the cost of \\\n",
+    "cleaning up me kitchen. I need yer help \\\n",
+    "right now, matey!\n",
+    "\"\"\"\n",
     "\n",
-    "_ = load_dotenv()"
+    "style =\"\"\"American English \\\n",
+    "in a calm and respectful tone\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = f\"\"\"translate the text\n",
+    "that is delimited by the triple backticks\n",
+    "into a style that is {style}\n",
+    "text: ```{customer_email}```\n",
+    "\"\"\"\n",
+    "\n",
+    "print(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = get_completion(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arr, I'm quite angered that my blender lid flew off and completely splattered my kitchen walls with smoothie! Adding to the frustration, the warranty doesn't even cover the expenses of cleaning up my kitchen. I kindly request your assistance at this moment, my friend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now Langchain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import ChatPromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=['style', 'text'], messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['style', 'text'], template='response to the request\\nthat is delimited by the triple backticks\\nwith a style that is {style} in less than 200 characters\\ntext: ```{text}```\\n'))])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt_template = \"\"\"response to the request\n",
+    "that is delimited by the triple backticks\n",
+    "with a style that is {style} in less than 200 characters\n",
+    "text: ```{text}```\n",
+    "\"\"\"\n",
+    "template = ChatPromptTemplate.from_template(prompt_template)\n",
+    "template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"\n",
+    "Arrr, I be fuming that me blender lid \\\n",
+    "flew off and splattered me kitchen walls \\\n",
+    "with smoothie! And to make matters worse,\\\n",
+    "the warranty don't cover the cost of \\\n",
+    "cleaning up me kitchen. I need yer help \\\n",
+    "right now, matey!\n",
+    "\"\"\"\n",
+    "\n",
+    "style =\"\"\"American English \\\n",
+    "in a calm and respectful tone\n",
+    "\"\"\"\n",
+    "\n",
+    "message = template.format_messages(\n",
+    "    style=style,\n",
+    "    text=text\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'> \n",
+      " <class 'langchain.schema.messages.HumanMessage'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[HumanMessage(content=\"response to the request\\nthat is delimited by the triple backticks\\nwith a style that is American English in a calm and respectful tone\\n in less than 200 characters\\ntext: ```\\nArrr, I be fuming that me blender lid flew off and splattered me kitchen walls with smoothie! And to make matters worse,the warranty don't cover the cost of cleaning up me kitchen. I need yer help right now, matey!\\n```\\n\")]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(type(message),\"\\n\",type(message[0]))\n",
+    "message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat = ChatOpenAI(\n",
+    "    api_key = os.getenv(\"OPEN_AI_KEY\"),\n",
+    "    model=os.getenv(\"LLM_MODEL\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"I apologize for the inconvenience caused, but I'm afraid I won't be able to assist with the cleaning cost. However, I'm here to help with any other queries or concerns you may have.\")"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = chat(message)\n",
+    "response"
    ]
   }
  ],
