re-order QnA notebook

--- a/notebooks/QnA.ipynb
+++ b/notebooks/QnA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,77 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.chains import RetrievalQA # questions over the Documents\n",
-    "from langchain.document_loaders import CSVLoader # combine document CSV with the LLM\n",
-    "from langchain.vectorstores import DocArrayInMemorySearch # helps to avoid using an external DB\n",
-    "from langchain.indexes import VectorstoreIndexCreator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = \"../data/Marvel_Comics.csv\"\n",
-    "loader = CSVLoader(\n",
-    "    file_path=file_path,\n",
-    "    encoding=\"utf8\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPEN_AI_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "index = VectorstoreIndexCreator(\n",
-    "    vectorstore_cls=DocArrayInMemorySearch\n",
-    ").from_loaders([loader])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"list all Spider-man commics\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' Actor Presents Spider-Man and the Incredible Hulk (2003), A+X (2012 - 2014) (Spider-Man and Beast fight zombies, while Iron Man, Kitty Pryde, and Lockheed battle the Brood!)'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index.query(query)"
    ]
   },
   {
@@ -515,6 +449,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`chain_type` is used for telling the chain how to join the documents chunks:\n",
+    "- `stuff` tipe will join everything (concatenate) and pass it to the prompt\n",
+    "- `map_reduce`: sumarize each chunk and add them together\n",
+    "- `refine`: summarize based on previous chunk adding them together gradually (more time consumming)\n",
+    "- `map_rerank`: like `map_reduce` but add a ranking for the responses joining the highest scores for the prompt\n",
+    "\n",
+    "![chain_type](../assets/chain_type.jpg \"chain_type\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. run the prompt using the chain for QnA"
    ]
   },
@@ -566,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The more encapsulated way"
+    "# C - The more encapsulated way with Index"
    ]
   },
   {
@@ -578,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,8 +574,8 @@
     "\n",
     "index = VectorstoreIndexCreator(\n",
     "    vectorstore_cls=DocArrayInMemorySearch,\n",
-    "    embedding=embeddings,\n",
-    ").from_loaders([loader])"
+    "    embedding=embeddings\n",
+    ").from_loaders([loader]) # add chain_type=\"stuff\" for langchain >= 0.3.0"
    ]
   },
   {
