--- a/notebooks/QnA.ipynb
+++ b/notebooks/QnA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "Document(page_content=\": 0\\ncomic_name: A Year of Marvels: April Infinite Comic (2016)\\nissue_description: The Infinite Comic that will have everyone talking! Full of fun, heart, and pranks, this is one folks'll be talking about for years!\", metadata={'source': '../data/Marvel_Comics.csv', 'row': 0})"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +118,14 @@
     {
      "data": {
       "text/plain": [
-       "[-0.0006912446115165949,\n",
-       " 0.008174439892172813,\n",
-       " -0.01096994336694479,\n",
-       " -0.0207445677369833,\n",
-       " -0.01272436324506998]"
+       "[-0.000682526733726263,\n",
+       " 0.008164625614881516,\n",
+       " -0.011010359972715378,\n",
+       " -0.020723117515444756,\n",
+       " -0.01268696691840887]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "Document(page_content=\": 85\\ncomic_name: Actor Presents Spider-Man and the Incredible Hulk (2003)\\nissue_description: Marvel Comics and A.C.T.O.R. team up to bring you two stories about Marvel's most popular characters in this special one-shot benefit book for the holiday season. Proceeds from this book benefit A.C.T.O.R., the charitable organization dedicated to providing financial assistance to disadvantaged comic book creators. 32 PGS./MARVEL PSR...$2.50\", metadata={'source': '../data/Marvel_Comics.csv', 'row': 85})"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -263,9 +263,9 @@
       ": 22\n",
       "comic_name: A+X (2012 - 2014)\n",
       "issue_description: SPIDER-WOMAN & KITTY PRYDE (with Lockheed in tow, of course) investigate some unfinished alien business! Adam Warren returns to Marvel with an amazing short story so chock full of awesome that we can't even attempt to sum it up in one sentence!\n",
-      ": 17\n",
-      "comic_name: A+X (2012 - 2014)\n",
-      "issue_description: CAPTAIN AMERICA + CYCLOPS continue their quest to root out Cadre K! Plus: Two former villains...SUPERIOR SPIDER-MAN + MAGNETO! Max Bemis of the band Say Anything makes his Marvel Comics writing debut!\n"
+      ": 2\n",
+      "comic_name: A Year of Marvels: February Infinite Comic (2016)\n",
+      "issue_description: Join us in a brand new Marvel comics adventure as your favorite heroes journey through the calendar year one month at a time! It’s February and Peter Parker’s got a hot date, but the old Parker luck hits hard…and so does the bank-robbing villain The Vulture! It’s a tale of romance, adventure, and punching!\n"
      ]
     }
    ],
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -502,6 +502,8 @@
     }
    ],
    "source": [
+    "from IPython.display import display, Markdown\n",
+    "\n",
     "query =  \"Please list all your Spider-Man comics in a table \\\n",
     "in markdown and summarize each one.\"\n",
     "\n",
@@ -525,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,16 +584,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Query using the LLM"
+    "4. Query using the LLM and the RetrievalQA Chain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING! api_key is not default parameter.\n",
+      "                    api_key was transferred to model_kwargs.\n",
+      "                    Please confirm that api_key is what you intended.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new RetrievalQA chain...\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.chains import RetrievalQA\n",
     "\n",
     "llm = ChatOpenAI(\n",
     "    api_key = os.getenv(\"OPEN_AI_KEY\"),\n",
@@ -599,33 +623,34 @@
     "    temperature=0.0\n",
     ")\n",
     "\n",
+    "qa = RetrievalQA.from_chain_type(\n",
+    "    llm=llm, \n",
+    "    chain_type=\"stuff\", \n",
+    "    retriever=index.vectorstore.as_retriever(), \n",
+    "    verbose=True,\n",
+    ")\n",
+    "\n",
     "query =  \"Please list all your Spider-Man comics in a table \\\n",
     "in markdown and summarize each one.\"\n",
-    "response = index.query(query, llm=llm)"
+    "response = qa.run(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "| # | Comic Name                                      | Issue Description                                                                                       |\n",
-       "|---|------------------------------------------------|--------------------------------------------------------------------------------------------------------|\n",
-       "| 85 | Actor Presents Spider-Man and the Incredible Hulk (2003) | Marvel Comics and A.C.T.O.R. team up to bring you two stories about Marvel's most popular characters in this special one-shot benefit book for the holiday season. Proceeds from this book benefit A.C.T.O.R., the charitable organization dedicated to providing financial assistance to disadvantaged comic book creators. 32 PGS./MARVEL PSR...$2.50 |\n",
-       "| 29 | A+X (2012 - 2014)                              | Spider-Man and Beast fight zombies, while Iron Man, Kitty Pryde, and Lockheed battle the Brood!         |\n",
-       "| 2  | A Year of Marvels: February Infinite Comic (2016)   | Join us in a brand new Marvel comics adventure as your favorite heroes journey through the calendar year one month at a time! It’s February and Peter Parker’s got a hot date, but the old Parker luck hits hard…and so does the bank-robbing villain The Vulture! It’s a tale of romance, adventure, and punching! |\n",
-       "| 22 | A+X (2012 - 2014)                              | SPIDER-WOMAN & KITTY PRYDE (with Lockheed in tow, of course) investigate some unfinished alien business! Adam Warren returns to Marvel with an amazing short story so chock full of awesome that we can't even attempt to sum it up in one sentence! |\n",
+       "| Issue | Comic Name                                     | Summary                                                                                                 |\n",
+       "|-------|------------------------------------------------|---------------------------------------------------------------------------------------------------------|\n",
+       "| 85    | Actor Presents Spider-Man and the Incredible Hulk (2003) | A special one-shot benefit book for the holiday season featuring two stories about Spider-Man and the Incredible Hulk. Proceeds from this book benefit A.C.T.O.R., a charitable organization for disadvantaged comic book creators. |\n",
+       "| 29    | A+X (2012 - 2014)                             | Spider-Man and Beast fight zombies, while Iron Man, Kitty Pryde, and Lockheed battle the Brood!          |\n",
+       "| 2     | A Year of Marvels: February Infinite Comic (2016) | Peter Parker's hot date is interrupted by the bank-robbing villain The Vulture. A tale of romance, adventure, and punching! |\n",
+       "| 22    | A+X (2012 - 2014)                             | Spider-Woman and Kitty Pryde, with Lockheed, investigate unfinished alien business in an amazing short story by Adam Warren. |\n",
        "\n",
-       "- **Actor Presents Spider-Man and the Incredible Hulk (2003)**: This special one-shot benefit book features two stories about Spider-Man and the Incredible Hulk. Proceeds from this comic benefit A.C.T.O.R., a charitable organization supporting disadvantaged comic book creators.\n",
-       "\n",
-       "- **A+X (2012 - 2014) #29**: Spider-Man and Beast team up to fight zombies, while Iron Man, Kitty Pryde, and Lockheed battle the Brood.\n",
-       "\n",
-       "- **A Year of Marvels: February Infinite Comic (2016) #2**: In this comic, Peter Parker has a hot date in February, but his luck takes a turn when the bank-robbing villain, The Vulture, appears. It's a story of romance, adventure, and punching.\n",
-       "\n",
-       "- **A+X (2012 - 2014) #22**: Spider-Woman and Kitty Pryde, accompanied by Lockheed, investigate unfinished alien business in this thrilling comic written by Adam Warren."
+       "Note: These are just a few Spider-Man comics mentioned in the given context. There may be more Spider-Man comics not mentioned here."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -636,6 +661,7 @@
     }
    ],
    "source": [
+    "from IPython.display import display, Markdown\n",
     "display(Markdown(response))"
    ]
   }
